--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,10 @@ urls:
 
 author_logo: profile.png
 author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
+author_bio: This site uses the devlopr-jekyll theme
+author_email: "info@incarnet.com"
+author_location: Minneapolis, MN
+author_website_url: "https://incarnet.com"
 typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
 
 # Experiences
