--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,13 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.png
-author: John Doe
+author_logo: profile.jpg
+author: Myron Netterlund
 author_bio: This site uses the devlopr-jekyll theme
 author_email: "info@incarnet.com"
 author_location: Minneapolis, MN
 author_website_url: "https://incarnet.com"
-typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
+typewrite-text: This is a test... of the developer BIO system.
 
 # Experiences
 author_work_experiences:
@@ -52,10 +52,10 @@ author_work_experiences:
 # Education
 author_education_details:
               - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
+                college_name: ORU
+                college_url: https://oru.edu
+                college_degree: Art, Duel minor: Telecom & Graphic Design
+                description: Bachelor of Art
                 visibility: true
 
 # Projects
@@ -72,16 +72,16 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+twitter_username: incarnetdesign
+github_username:  mvnmin
+facebook_username: netterlund
+linkedin_username: myronnetterlund
+# behance_username: johndoe
+# instagram_username: johndoe
+# medium_username: johndoe
+# telegram_username: johndoe
+# dribbble_username: johndoe
+# flickr_username: johndoe
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
