--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: sentertec
-subtitle: The development branch if INCARNET
+subtitle: The development branch of INCARNET
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
