--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ author_education_details:
               - college_logo: mit.png
                 college_name: ORU
                 college_url: https://oru.edu
-                college_degree: Art, Duel minor: Telecom & Graphic Design
+                college_degree: Art, Duel minor: Telecom and Graphic Design
                 description: Bachelor of Art
                 visibility: true
 
